# nvortexHip

./: .gitignore  CMakeLists.txt  Makefile  README.md  ngHip05.cpp  ngHip05.hip  ngHip06.cpp  ngHip06.hip  ngHip07.cpp  ngHip07.hip  nvHip01.hip  nvHip02.hip  nvHip03.hip  nvHip04.cpp  nvHip04.hip  nvHip05.cpp  nvHip05.hip
scripts/: gpumap.sh  runflopscount.sh
src/: ngHip04.hip  ngHip05.hip  ngHip06.hip  ngHip08.hip  ngHip09.hip  ngHip10.hip  ngHipTimestepping.cpp  nvHip02.cpp
